more resources of multi threading added